# proto-packet

./: .gitignore  Cargo.toml  ISSUES.md  README.md  build.sh
compile/: Cargo.toml  README.md
compile/proto-packet-cli/: Cargo.toml  README.md
compile/proto-packet-cli/src/: args.rs  io.rs  main.rs
compile/proto-packet-cli/src/sub/: compile.rs  generate.rs  mod.rs  parse.rs  validate.rs
compile/proto-packet-compile/: Cargo.toml  README.md
compile/proto-packet-compile/src/: compiler.rs  config.rs  error.rs  lib.rs  project_reader.rs  project_writer.rs
compile/proto-packet-compile/src/config/: config.rs  config_reader.rs  language.rs  mod.rs
compile/proto-packet-compile/src/io/: mod.rs  project_reader.rs  schema_reader.rs  source_writer.rs
compile/proto-packet-gen/: Cargo.toml  README.md
compile/proto-packet-gen/src/: code_generator.rs  generated_code.rs  generator.rs  lib.rs  reader.rs  writer.rs
compile/proto-packet-gen/src/config/: gen_config.rs  mod.rs
compile/proto-packet-gen/src/rust/: error.rs  gen_rust.rs  mod.rs
compile/proto-packet-link/: Cargo.toml  README.md
compile/proto-packet-link/src/: error.rs  lib.rs  project_linker.rs  resolver.rs  schema_linker.rs  type_linker.rs
compile/proto-packet-parse/: Cargo.toml  README.md
compile/proto-packet-parse/src/: config.rs  lib.rs
compile/proto-packet-parse/src/common/: mod.rs  qualified_name.rs  tag_number.rs
compile/proto-packet-parse/src/enum/: enum.rs  enum_case.rs  enums.rs  mod.rs
compile/proto-packet-parse/src/error/: error.rs  error_code.rs  error_codes.rs  error_info.rs  mod.rs
compile/proto-packet-parse/src/message/: message.rs  message_field.rs
compile/proto-packet-parse/src/project/: import.rs  schema_file.rs  type_dec.rs
compile/proto-packet-parse/src/schema/: import.rs  schema_file.rs  type_dec.rs
compile/proto-packet-parse/src/service/: mod.rs  service.rs  service_call.rs
compile/proto-packet-parse/src/struct/: struct.rs  struct_field.rs
compile/proto-packet-parse/src/var/: type_tag.rs
compile/proto-packet-parse/src/variant/: variant.rs  variant_case.rs
compile/proto-packet-tree/: Cargo.toml
compile/proto-packet-tree/src/: lib.rs
compile/proto-packet-tree/src/common/: mod.rs  with_comments.rs  with_tag_number.rs
compile/proto-packet-tree/src/enum/: enum.rs  enum_case.rs
compile/proto-packet-tree/src/message/: message.rs  message_field.rs
compile/proto-packet-tree/src/naming/: case_name.rs  field_name.rs  mod.rs  mod_name.rs  mod_path.rs  qualified_name.rs  service_call_name.rs  type_name.rs  validate_name.rs
compile/proto-packet-tree/src/project/: import.rs  project.rs  type_dec.rs
compile/proto-packet-tree/src/schema/: import.rs  schema_file.rs  type_dec.rs
compile/proto-packet-tree/src/service/: mod.rs  service.rs  service_call.rs
compile/proto-packet-tree/src/struct/: struct.rs  struct_field.rs
compile/proto-packet-tree/src/var/: primitive_type.rs  special_type.rs  type_tag.rs
compile/proto-packet-tree/src/variant/: variant.rs  variant_case.rs
compile/proto-packet-validate/: Cargo.toml
compile/proto-packet-validate/src/: lib.rs
compile/proto-packet-validate/src/common/: tag_number.rs
compile/proto-packet-validate/src/enum/: enum.rs  enum_case.rs  enums.rs  mod.rs
compile/proto-packet-validate/src/error/: error.rs  error_code.rs  error_codes.rs  error_info.rs
compile/proto-packet-validate/src/message/: message.rs  message_field.rs
compile/proto-packet-validate/src/project/: import.rs  mod.rs  schema_file.rs  type_dec.rs
compile/proto-packet-validate/src/schema/: import.rs  schema_file.rs  type_dec.rs
compile/proto-packet-validate/src/service/: service.rs  service_call.rs
dep/rust/: Cargo.toml  README.md
dep/rust/src/: lib.rs
proto-packet/: Cargo.toml
proto-packet-cli/: Cargo.toml
proto-packet-cli/src/: args.rs  io.rs  main.rs
proto-packet-cli/src/sub/: compile.rs  generate.rs  mod.rs  parse.rs  validate.rs
proto-packet-compile/: Cargo.toml
proto-packet-compile/src/: compiler.rs  compiler_error.rs  error.rs  lib.rs  project_reader.rs  project_writer.rs  schema_file_reader.rs  schema_file_resolver.rs
proto-packet-compile/tests/: compile_rust.rs
proto-packet-dataset/: Cargo.toml  README.md
proto-packet-dataset/src/file/: mod.rs
proto-packet-gen/: Cargo.toml
proto-packet-gen/src/: generated.rs  generator.rs  lib.rs
proto-packet-gen/src/rust/: error.rs  mod.rs  naming.rs  rust_generator.rs  typing.rs
proto-packet-parse/: Cargo.toml
proto-packet-parse/src/: error.rs  lib.rs  message.rs  message_field.rs  parse.rs  schema_file.rs  type_tag.rs  util.rs  whitespace.rs
proto-packet-parse/src/common/: mod.rs  qualified_name.rs  tag_number.rs
proto-packet-parse/src/enums/: enum_case.rs  enumeration.rs  mod.rs
proto-packet-parse/src/message/: message.rs  message_field.rs
proto-packet-parse/src/project/: import.rs  mod.rs  schema_file.rs  type_dec.rs
proto-packet-parse/src/var/: mod.rs  type_tag.rs  var.rs
proto-packet-parse/src/variant/: variant.rs  variant_case.rs
proto-packet-test/: Cargo.toml  README.md
proto-packet-test/schema/: enums.pps  message_fields.pps  message_slice_fields.pps  variant_fields.pps
proto-packet-test/src/: lib.rs
proto-packet-test/src/enums/: empty_enum.rs  multiple_cases.rs  single_case.rs
proto-packet-test/src/message_fields/: mod.rs  named_types.rs  special_types.rs  unsigned_ints.rs
proto-packet-test/src/message_slice_fields/: message_named_type_slices.rs  message_unsigned_int_slices.rs  mod.rs  unsigned_ints.rs
proto-packet-test/src/variant_fields/: named_types.rs  special_types.rs  unsigned_ints.rs
proto-packet-test/tests/: common.rs  enums.rs  message_fields.rs  message_slice_fields.rs  variant_fields.rs
proto-packet/src/: enumeration.rs  lib.rs  packet.rs
proto-packet/src/io/: mod.rs  tag_number.rs  wire_type.rs
test/rust/: Cargo.toml  README.md  build.sh
test/rust/src/: lib.rs
test/rust/tests/: enums.rs  enums_enums.rs  messages.rs  messages_fields.rs  messages_lists.rs  structs.rs  structs_fields.rs  structs_lists.rs
(+520 files in other folders)
