[package]
name = "proto-packet"
version = "0.1.0-rc.11"
description = "This library provides the dependencies for generated ProtoPacket code."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet"
homepage = "https://github.com/nikdeapen/proto-packet"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
license = "MIT"

[dependencies]
enc = { version = "0.19.0", features = ["var-int"] }

uuid = "1"
serde = { version = "1", features = ["derive"] }
actix-web = { version = "4", optional = true }

[dev-dependencies]
enc = { version = "0.19.0", features = ["dev"] }

[features]
actix = ["actix-web"]
