[workspace]
resolver = "2"
members = [
    "proto-packet-cli",
    "proto-packet-compile",
    "proto-packet-gen",
    "proto-packet-link",
    "proto-packet-parse",
    "proto-packet-tree",
    "proto-packet-validate",
]

[workspace.dependencies]
proto-packet = { path = "../dep/rust" }
proto-packet-compile = { path = "proto-packet-compile" }
proto-packet-gen = { path = "proto-packet-gen" }
proto-packet-link = { path = "proto-packet-link" }
proto-packet-parse = { path = "proto-packet-parse" }
proto-packet-tree = { path = "proto-packet-tree" }
proto-packet-validate = { path = "proto-packet-validate" }

clap = "4.5.46"
clerr = { git = "https://github.com/nikdeapen/clerr" } # todo -- path dependency
code-gen = { git = "https://github.com/nikdeapen/code-gen" } # todo -- path dependency
colored = "3.0.0"
custom-string = { git = "https://github.com/nikdeapen/custom-string" } # todo -- path dependency
file-storage = { git = "https://github.com/nikdeapen/file-storage" } # todo -- path dependency
serde = "1.0.219"
serde_json = "1.0.143"
lex = { git = "https://github.com/nikdeapen/lex" } # todo -- path dependency
