[workspace]
resolver = "2"
members = [
    "proto-packet-gen",
    "proto-packet-parse",
    "proto-packet-tree",
    "proto-packet-validate",
]

[workspace.dependencies]
proto-packet-parse = { path = "proto-packet-parse" } # todo -- path dependency
proto-packet-tree = { path = "proto-packet-tree" } # todo -- path dependency

clerr = "0.8.0-rc.1"
custom-string = "0.7.0-rc.1"
lex = "0.13.0-rc.1"

colored = "3.0.0"
