[workspace]
resolver = "2"
members = [
    "proto-packet-cli",
    "proto-packet-compile",
    "proto-packet-gen",
    "proto-packet-link",
    "proto-packet-parse",
    "proto-packet-tree",
    "proto-packet-validate",
]

[workspace.dependencies]
proto-packet = { path = "../dep/rust" }                         # todo -- path dependency
proto-packet-compile = { path = "proto-packet-compile" }        # todo -- path dependency
proto-packet-gen = { path = "proto-packet-gen" }                # todo -- path dependency
proto-packet-link = { path = "proto-packet-link" }              # todo -- path dependency
proto-packet-parse = { path = "proto-packet-parse" }            # todo -- path dependency
proto-packet-tree = { path = "proto-packet-tree" }              # todo -- path dependency
proto-packet-validate = { path = "proto-packet-validate" }      # todo -- path dependency

clerr = "0.8.0-rc.1"
code-gen = "0.8.0-rc.2"
custom-string = "0.7.0-rc.1"
file-storage = "0.6.0-rc.1"
lex = "0.13.0-rc.1"

clap = "4.5.53"
colored = "3.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
