[package]
name = "proto-packet-dataset"
version = "0.0.0"
description = "This library aids in processing ProtoPacket datasets."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet"
homepage = "https://github.com/nikdeapen/proto-packet/proto-packet-dataset"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"
