[package]
name = "proto-packet"
version = "0.0.0"
description = "This library holds the dependencies for generated ProtoPacket code."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet"
homepage = "https://github.com/nikdeapen/proto-packet/proto-packet"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
enc = { git = "https://github.com/nikdeapen/enc.git", features = ["var-int"] }
