[package]
name = "proto-packet-compile"
version = "0.0.0"
description = "This library aids in compiling ProtoPacket projects."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet"
homepage = "https://github.com/nikdeapen/proto-packet/compile/proto-packet-compile"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
proto-packet-gen = { workspace = true }
proto-packet-link = { workspace = true }
proto-packet-parse = { workspace = true }
proto-packet-tree = { workspace = true }
proto-packet-validate = { workspace = true }

clerr = { workspace = true }
colored = { workspace = true }
file-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lex = { workspace = true }

