[package]
name = "proto-packet-link"
version = "0.0.0"
description = "This library aids in linking ProtoPacket schema files."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet"
homepage = "https://github.com/nikdeapen/proto-packet/compile/proto-packet-link"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"
