[package]
name = "proto-packet-parse"
version = "0.0.0"
description = "This library aids in parsing ProtoPacket schema files."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet"
homepage = "https://github.com/nikdeapen/proto-packet/compile/proto-packet-parse"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
proto-packet-tree = { workspace = true }

clerr = { workspace = true }
lex = { workspace = true }
