[package]
name = "proto-packet"
version = "0.0.0"
description = "This library provides the dependencies for generated ProtoPacket code."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet"
homepage = "https://github.com/nikdeapen/proto-packet/dep/rust"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
enc = { git = "https://github.com/nikdeapen/enc", features = ["var-int"] } # todo -- path dependency
uuid = "1.18.0"

[dev-dependencies]
enc = { git = "https://github.com/nikdeapen/enc", features = ["test"] } # todo -- path dependency
