[package]
name = "proto-packet-test"
version = "0.0.0"
description = "This library tests generated ProtoPacket schemas."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet"
homepage = "https://github.com/nikdeapen/proto-packet/test/rust"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
proto-packet = { path = "../../dep/rust" }
enc = { version = "0.17.0-rc.2", features = ["var-int"] }

serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
enc = { version = "0.17.0-rc.2", features = ["test"] }
